# coastline-loader

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  environment_dev.yml  example.ipynb  example.py  gshhs.py  pyproject.toml  requirements.in  requirements.txt
coastline_loader/: __init__.py  gshhs.py
tests/: test_gshhs.py
